--- a/src/main/webapp/pages/FindForm/FindForm.html
+++ b/src/main/webapp/pages/FindForm/FindForm.html
@@ -124,7 +124,7 @@
                                                                 <wm-grid-column binding="municipalityName" caption="Municipality" type="string" edit-widget-type="text" show="bind:Widgets.selectView.datavalue.viewName==='Standard'" readonly="false"></wm-grid-column>
                                                                 <wm-grid-column binding="formDesign" caption="Form" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                                 <wm-grid-column binding="formStatus" caption="Form Status" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                                                <wm-grid-column binding="subdivision" caption="Subdivision" type="string" edit-widget-type="text" show="bind:Widgets.selectView.datavalue.viewName==='Homebuilder'" readonly="false"></wm-grid-column>
+                                                                <wm-grid-column binding="subdivision" caption="Development" type="string" edit-widget-type="text" show="bind:Widgets.selectView.datavalue.viewName==='Homebuilder'" readonly="false"></wm-grid-column>
                                                                 <wm-grid-column binding="lot" caption="Lot" type="string" edit-widget-type="text" show="bind:Widgets.selectView.datavalue.viewName==='Homebuilder'" readonly="false"></wm-grid-column>
                                                                 <wm-grid-column binding="address" caption="Address" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                                 <wm-grid-column binding="primaryVendor" caption="Primary Contractor" type="string" edit-widget-type="text" show="bind:Widgets.selectView.datavalue.viewName==='Standard'"
@@ -247,7 +247,7 @@
                                                                 readonly="false"></wm-grid-column>
                                                                 <wm-grid-column binding="formDesign" caption="Form" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                                 <wm-grid-column binding="formStatus" caption="Form Status" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                                                <wm-grid-column binding="subdivision" caption="Subdivision" type="string" edit-widget-type="text" show="bind:Widgets.selectViewContractor.datavalue.viewName==='Homebuilder'"
+                                                                <wm-grid-column binding="subdivision" caption="Development" type="string" edit-widget-type="text" show="bind:Widgets.selectViewContractor.datavalue.viewName==='Homebuilder'"
                                                                 readonly="false"></wm-grid-column>
                                                                 <wm-grid-column binding="lot" caption="Lot" type="string" edit-widget-type="text" show="bind:Widgets.selectViewContractor.datavalue.viewName==='Homebuilder'" readonly="false"></wm-grid-column>
                                                                 <wm-grid-column binding="address" caption="Address" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
@@ -283,7 +283,7 @@
                                             <wm-label class="col-md-3 form-control-static" caption="Search By" width="100%" name="label28" fontweight="bold"></wm-label>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="5" name="gridcolumn113">
-                                            <wm-radioset height="auto" name="radiosetSelectAddressType" layout="inline" dataset="Address,Subdivision,Parcel" selectedvalue="Address"></wm-radioset>
+                                            <wm-radioset height="auto" name="radiosetSelectAddressType" layout="inline" dataset="Address,Development,Parcel" selectedvalue="Address"></wm-radioset>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="2" name="gridcolumn132_1"></wm-gridcolumn>
                                     </wm-gridrow>
@@ -313,7 +313,7 @@
                                                 <wm-layoutgrid name="layoutgrid9">
                                                     <wm-gridrow name="gridrow40_1" padding="unset unset .5em unset">
                                                         <wm-gridcolumn columnwidth="12" name="gridcolumn96_1">
-                                                            <wm-search placeholder="Search by Subdivision Name" dataset="bind:Variables.Subdivisions.dataSet" searchkey="subdivision" displaylabel="subdivision" datafield="All Fields" name="searchFliterSubdivisions"
+                                                            <wm-search placeholder="Search by Development Name" dataset="bind:Variables.Subdivisions.dataSet" searchkey="subdivision" displaylabel="subdivision" datafield="All Fields" name="searchFliterSubdivisions"
                                                             displayexpression="bind:$[data[$i].subdivision]+'-->'+$[data[$i].subShortCode]" orderby="subdivision:asc"></wm-search>
                                                         </wm-gridcolumn>
                                                     </wm-gridrow>
@@ -365,7 +365,7 @@
                                         <wm-gridcolumn columnwidth="5" name="gridcolumn112_1"></wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow56_1" padding="1em unset">
-                                        <wm-gridcolumn columnwidth="7" name="gridcolumn130_1">
+                                        <wm-gridcolumn columnwidth="12" name="gridcolumn130_1">
                                             <wm-container name="containerAddressFilters" show="bind:(!!Widgets.searchSubdivision.datavalue.id>0) || (!!Widgets.searchAddress.datavalue.id>0) ||(Widgets.searchParcel.datavalue.id > 0)">
                                                 <wm-layoutgrid name="layoutgrid13">
                                                     <wm-gridrow name="gridrow58" padding="0.5em unset">
@@ -423,7 +423,6 @@
                                                 </wm-layoutgrid>
                                             </wm-container>
                                         </wm-gridcolumn>
-                                        <wm-gridcolumn columnwidth="5" name="gridcolumn131_1"></wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow padding=".5em unset" name="gridrow40">
                                         <wm-gridcolumn columnwidth="2" name="gridcolumn133"></wm-gridcolumn>
@@ -527,7 +526,7 @@
                                                                 readonly="false"></wm-grid-column>
                                                                 <wm-grid-column binding="formDesign" caption="Form" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                                 <wm-grid-column binding="formStatus" caption="Form Status" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                                                <wm-grid-column binding="subdivision" caption="Subdivision" type="string" edit-widget-type="text" show="bind:Widgets.selectViewAdvanced.datavalue.viewName==='Homebuilder'"
+                                                                <wm-grid-column binding="subdivision" caption="Development" type="string" edit-widget-type="text" show="bind:Widgets.selectViewAdvanced.datavalue.viewName==='Homebuilder'"
                                                                 readonly="false"></wm-grid-column>
                                                                 <wm-grid-column binding="lot" caption="Lot" type="string" edit-widget-type="text" show="bind:Widgets.selectViewAdvanced.datavalue.viewName==='Homebuilder'" readonly="false"></wm-grid-column>
                                                                 <wm-grid-column binding="address" caption="Address" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
