cleaned up the last few locations for "Subdivision"->"Development" Files modified - [_viewForm,NewForm,FindForm,_viewProject]

--- a/src/main/webapp/pages/FindForm/FindForm.html
+++ b/src/main/webapp/pages/FindForm/FindForm.html
@@ -309,7 +309,7 @@
                                                     </wm-gridrow>
                                                 </wm-layoutgrid>
                                             </wm-container>
-                                            <wm-container name="containerSubdivision" show="bind:Widgets.radiosetSelectAddressType.datavalue=='Subdivision'">
+                                            <wm-container name="containerSubdivision" show="bind:Widgets.radiosetSelectAddressType.datavalue=='Development'">
                                                 <wm-layoutgrid name="layoutgrid9">
                                                     <wm-gridrow name="gridrow40_1" padding="unset unset .5em unset">
                                                         <wm-gridcolumn columnwidth="12" name="gridcolumn96_1">
